@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gtk2hs-0.9.10-cflags.patch 1233 RMD160 eb5cb160a304cc4f5535be9a218549aaaad7c56c SHA1 68f3d351fa801f77f3ebce853919b604fbb26b18 SHA256 867b3dec0d2d0bea714f85eadcc4825dd1815f021feb53bb070d1f78e330ccef
 AUX gtk2hs-0.9.10-ghc622.patch 1440 RMD160 aa50f1a098efbb464993c2824314f79b58131ead SHA1 50522f3ab5ddcac4403953266b486098ae85179e SHA256 48d5b2565eb8a77658f0e6950e021cbf1a0c88ba2810fd8f4ece0c92d4d23b66
 AUX gtk2hs-0.9.10-store.patch 678 RMD160 9369b99cfca278e252ea6b5c25ba23bcb53603e8 SHA1 a4d4685b483612bd4ae78af2fac7efcaf5b36310 SHA256 e47de4d759ff4e68ef9d278ddb5d8db77c463a87ac964578fe929db0ba1cf06f
@@ -5,7 +8,14 @@ DIST gtk2hs-0.9.11.tar.gz 980618 RMD160 c745020329fab493752d9055c4c8bca798b5d3e1
 DIST gtk2hs-0.9.12.1.tar.gz 1004661 RMD160 cd658027ed91b9550915e686d546e36b1b371c10 SHA1 a85f8568aa072e0c55da5889b2aabff92b8da3ae SHA256 4278078b786202fc64f86881c2b2517bdd589d5248bff2e9b7e6c1ffd2361f84
 DIST gtk2hs-0.9.12.tar.gz 997153 RMD160 bfc3ad81be80fdbbf1694493d93ddf863efbf6d8 SHA1 401638c5abfc357b648e4aa4b234874c116a52bb SHA256 b7427fca5d1958a829b2623715a9b16d4b08d67820df0b46ad32e5bd6e1f44d2
 EBUILD gtk2hs-0.9.11.ebuild 3089 RMD160 41d3ee491c7fe970fa184c6af26ce0c81ee938ce SHA1 af3969e4330e176abf7945f995d92066bfdca0f7 SHA256 1eaa401700d372838d24c9557c37a9e51ddee6e95e69a2cd6a0bf8f3ccf92e53
-EBUILD gtk2hs-0.9.12.1.ebuild 3110 RMD160 072ebb8348163e7ccf85d4f969eb6bbf882a3cdc SHA1 4310c0abc3e7a3c2392a2b8dfd65d2d649465611 SHA256 bd71212cc0b81367a215f4e422bd0fa609fc8a831f1a8ee1298b4901cc3f26ff
+EBUILD gtk2hs-0.9.12.1.ebuild 3303 RMD160 a8c5b4a7259b832e02af067a1d8affc84ef2b5ef SHA1 f252f3241a8ba4093d8ee57de617d637c596dc9e SHA256 43e59bf1e734c6127de8dbd67e57a376518ec84f67be7eb3e19781c87f356e37
 EBUILD gtk2hs-0.9.12.ebuild 3319 RMD160 2dde9fcc69f3c87b2eb36a4197f48ba6ac7ada5d SHA1 2273a1ad3877d7c4e6c90519f3e70a033cd0e116 SHA256 198e5d051699baa27b53075f15220c0c404ca336c5faa603e98bedc18682da5d
-MISC ChangeLog 5966 RMD160 e75dd8e9131d8ceae879125d3dcc836fabef5d31 SHA1 d614024f588b7c1fd42375be5e9c7d80d5d53278 SHA256 f3dd1fcff7043e7700072f5a78781ee4458faed4a1aa9ef4763baad17edb8210
+MISC ChangeLog 6130 RMD160 a5d34e15d6b43cdee75e3d4318b4a207a6432530 SHA1 2ccbd4a08428f489a4e141005cfcdc3dbd2a5281 SHA256 6fc461bcfe664a0a8a70ac91ea70b67980ec5cdfef71ab11d1ac7c9719ec74ba
 MISC metadata.xml 223 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be SHA1 3be3a7139f7e71b712959fb7465f73d1bcb6ba07 SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFIHcEa1n/CYbXjntIRAnNqAKCvJEPh4vLWNsSYvva7ljkMVrp3PQCfYNVA
+34XFd22odMAwgdJSJpjq0uo=
+=vWsN
+-----END PGP SIGNATURE-----
