@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/gtk2hs
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.43 2008/03/17 15:25:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.44 2008/05/04 13:56:19 kolmodin Exp $
+
+  04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org>
+  gtk2hs-0.9.12.1.ebuild:
+  Add Duncan Coutts' fix when using haddock 0.9.
+  This should close bug #220185.
 
   17 Mar 2008; Raúl Porcel <armin76@gentoo.org> gtk2hs-0.9.11.ebuild,
   gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
